demo3/WIP-kube-egress-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kube-egress-policy
  namespace: namespace2
spec:
  podSelector:
    matchLabels:
      app: shell2
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          networking/namespace: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    - ipBlock:
         cidr: 10.43.0.10/32
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
