demo3/closed-egress-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-policy
  namespace: namespace2
spec:
  podSelector: {}
  policyTypes:
  - Egress
