demo3/closed-ingress-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-policy
  namespace: namespace1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
